--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <div class="p-6 bg-blue-600 text-white rounded-xl">
   Tailwind v3 works in Angular 19 🚀
 </div>
+<div class="card flex justify-center my-10">
+  <p-button label="Check" />
+</div>
 
 <router-outlet></router-outlet>
