--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,5 +1,3 @@
-<footer
-  class="h-10 bg-white border-t flex items-center justify-center text-sm text-gray-500"
->
+<footer class="h-10 bg-white border-t flex items-center justify-center text-sm text-gray-500">
   © 2026 MyCompany
 </footer>
