--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,3 +1,3 @@
-<header class="h-14 bg-white border-b flex items-center px-4">
+<header class="flex h-14 items-center border-b bg-white px-4">
   <h1 class="text-lg font-medium text-gray-800">Current Page</h1>
 </header>
