--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -3,7 +3,7 @@
   <app-sidebar></app-sidebar>
 
   <!-- Right side: Header + Content + Footer -->
-  <div class="flex flex-col flex-1 overflow-hidden">
+  <div class="flex flex-1 flex-col overflow-hidden">
     <!-- Header -->
     <app-header></app-header>
 
@@ -13,6 +13,6 @@
     </main>
 
     <!-- Footer -->
-    <app-footer></app-footer>
+    <!-- <app-footer></app-footer> -->
   </div>
 </div>
