--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,3 +1,5 @@
 <header class="flex h-14 items-center border-b bg-white px-4">
-  <h1 class="text-lg font-medium text-gray-800">{{ storageService.get('currentPage') }}</h1>
+  <h1 class="text-lg font-medium text-gray-800">
+    {{ commonService.storageService.get('currentPage') }}
+  </h1>
 </header>
